# raro-gemini

./: .env.example  .gitignore  .structure.json  ARCHITECTURE_SUMMARY.md  CONTENT.xml  Cargo.toml  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  STRUCTURE  STRUCTURE.md  STRUCTURE.md.md  cstash_orphans.txt  docker-compose.yml  nginx.conf  package-lock.json  package.json  readme-update.md  setup_env.sh
.claude/: settings.local.json
apps/agent-service/: Dockerfile  package.json  requirements.txt
apps/debug-probe/: Dockerfile
apps/debug-puppet/: Dockerfile  README.md  requirements.txt
apps/kernel-server/: Cargo.toml  Dockerfile
apps/kernel-server/config/: cortex_patterns.json
apps/kernel-server/scripts/: entrypoint.sh
apps/kernel-server/src/: dag.rs  events.rs  fs_manager.rs  main.rs  models.rs  observability.rs  registry.rs  runtime.rs  security.rs
apps/kernel-server/src/archive/: patch_2.md  runtime_patch.md
apps/kernel-server/src/server/: handlers.rs
apps/web-console/: .dockerignore  .env.mock.example  Dockerfile  Dockerfile.dev  index.html  package.json  tsconfig.json  vite.config.ts
backups/: Hero copy.svelte
examples/: sample_data.csv
guidance/: repo.md  research.md
guidance/active/: PUBSUB-IMPLEMENTATION-COMPLETE.md  PUBSUB-LIVE-LOGGING-PATCH.md  additional.md  architect.md  artifact_compliance.md  cache-patch-IMPLEMENTATION-COMPLETE.md  cache-patch.md  calibration.md  console_fix.md  control_deck.md  delegation-capability-patch.md  delegation.md  delegation_ii.md  delegation_patch.md  empty_identity-contract.md  focus.md  hero.md  initial.md  (+21 more)
hackathon/: fixes.md  submission.md  vm.md
html_prototypes/: 2.html  5.html
(+113 files in other folders)
