[package]
name = "raro-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
dashmap = "5.5"
async-trait = "0.1"
futures = "0.3"
tungstenite = "0.20"
tokio-tungstenite = "0.20"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
