[package]
name = "raro-kernel"
version = "0.1.0"
edition = "2021"
authors = ["RARO Team"]
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
dashmap = "5.5"
async-trait = "0.1"
futures = "0.3"
tungstenite = "0.20"
tokio-tungstenite = "0.20"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true